--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Recetas</title>
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <!--SECCION INICIO-->
     <section id="inicio">
@@ -17,29 +21,35 @@
                 <div class="logo">
                     <h1>Recetas</h1>
                 </div>
-                <nav id="nav">
+                <nav id="nav" class="responsive">
                     <ul>
                         <li>
-                            <a href="#inicio">
+                            <a href="#inicio" onclick="seleccionar()">
                                 <i class="fa-solid fa-house"></i>
                                 <span>Inicio</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#recetas">
+                            <a href="#recetas" onclick="seleccionar()">
                                 <i class="fa-solid fa-bowl-food"></i>
                                 <span>Recetas</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#contacto">
+                            <a href="#contacto" onclick="seleccionar()">
                                 <i class="fa-solid fa-comments"></i>
                                 <span>Contacto</span>
                             </a>
                         </li>
+                        <li>
+                            <div class="buscador">
+                                <input type="text" name="buscadorid" id="buscadorid" placeholder="Buscar recetas">
+                                <i class="fa-solid fa-magnifying-glass" onclick="scrollToRecipes()"></i>
+                            </div>
+                        </li>
                     </ul>
                 </nav>
-    
+
                 <div class="social">
                     <a href="tel:+595 0980782795">
                         <i class="fa-solid fa-phone"></i>
@@ -49,18 +59,19 @@
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                     <a href="#">
-                        <i class="fa-brands fa-twitter"></i> 
+                        <i class="fa-brands fa-twitter"></i>
                     </a>
                 </div>
-                <div class="nav-responsive" id="bar">
+                <div class="nav-responsive" id="bar" onclick="mostrarOcultar()">
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
         </header>
         <!--CARRUSEL-->
         <div class="carrusel">
-            <div class="gallery js-flickity" data-flickity-options='{ "wrapAround":true, "pageDots": false, "autoPlay": true}'>
-                <div class="gallery-cell" >
+            <div class="gallery js-flickity"
+                data-flickity-options='{ "wrapAround":true, "pageDots": false, "autoPlay": true}'>
+                <div class="gallery-cell">
                     <img src="img/1.jpg" alt="">
                 </div>
                 <div class="gallery-cell">
@@ -81,40 +92,117 @@
         </div>
     </section>
 
+    <!--SECCION RECETAS-->
+    <section id="recetas">
+        <h2 id="texto-recetas">Recetas</h2>
+        <div class="lista">
+            <div class="receta">
+                <h2>Pollo</h2>
+                <p class="texto-negrita"><br>Ingredientes:</p>
+                    <p>
+                    -pan<br> 
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    </p>
+                    <p class="texto-negrita"><br>Pasos:</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptatibus odit quia in commodi distinctio consectetur. Accusamus ea porro provident facere officia iure, maxime iusto error. At vitae corporis maiores.</p>
+            </div>
+            <div class="receta">
+                <h2>Sopa</h2>
+                <p class="texto-negrita"><br>Ingredientes:</p>
+                    <p>
+                    -pan<br> 
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    </p>
+                    <p class="texto-negrita"><br>Pasos:</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptatibus odit quia in commodi distinctio consectetur. Accusamus ea porro provident facere officia iure, maxime iusto error. At vitae corporis maiores.</p>
+            </div>
+            <div class="receta">
+                <h2>Bebidas</h2>
+                <p class="texto-negrita"><br>Ingredientes:</p>
+                    <p>
+                    -pan<br> 
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    </p>
+                    <p class="texto-negrita"><br>Pasos:</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptatibus odit quia in commodi distinctio consectetur. Accusamus ea porro provident facere officia iure, maxime iusto error. At vitae corporis maiores.</p>
+            </div>
+            <div class="receta">
+                <h2>queso</h2>
+                <p class="texto-negrita"><br>Ingredientes:</p>
+                    <p>
+                    -pan<br> 
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    </p>
+                    <p class="texto-negrita"><br>Pasos:</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptatibus odit quia in commodi distinctio consectetur. Accusamus ea porro provident facere officia iure, maxime iusto error. At vitae corporis maiores.</p>
+            </div>
+            <div class="receta">
+                <h2>golosinas</h2>
+                <p class="texto-negrita"><br>Ingredientes:</p>
+                    <p>
+                    -pan<br> 
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    </p>
+                    <p class="texto-negrita"><br>Pasos:</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptatibus odit quia in commodi distinctio consectetur. Accusamus ea porro provident facere officia iure, maxime iusto error. At vitae corporis maiores.</p>
+            </div>
+            <div class="receta">
+                <h2>postres</h2>
+                <p class="texto-negrita"><br>Ingredientes:</p>
+                    <p>
+                    -pan<br> 
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    -pan<br>
+                    </p>
+                    <p class="texto-negrita"><br>Pasos:</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus voluptatibus odit quia in commodi distinctio consectetur. Accusamus ea porro provident facere officia iure, maxime iusto error. At vitae corporis maiores.</p>
+            </div>
+        </div>
+    </section>
+
     <!--SECCION DE FORMULARIO-->
     <section id="formulario">
-        <div class="llenar-formulario">
-            <div class="recetas">
-                <h1>Añadir nueva receta</h1>
-            </div>
-            <div class="formulario">
+        <h1>Añadir nueva receta</h1>
+
+        <div class="form">
+            <div class="formulario-receta">
                 <div class="nombre-receta">
                     <h3>Nombre de la receta</h3>
-                    <input type="text" cols="50" class="campo-formulario">
+                    <input type="text" class="campo-formulario">
                 </div>
                 <div class="ingredientes">
                     <h3>Ingredientes:</h3>
                     <textarea cols="50" rows="15" class="campo-formulario"></textarea>
                 </div>
-                <div class="tipo">
-                    <h3>Tipo de receta:</h3>
-                    <select>
-                        <option value="Plato principal">Plato principal</option>
-                        <option value="Sopas y cremas">Sopas y cremas</option>
-                        <option value="Ensaladas">Ensaladas</option>
-                        <option value="Postres">Postres</option>
-                        <option value="Bebidas">Bebidas</option>
-                    </select>
-
+            </div>
+            <div class="pasos-receta">
+                <h3>Pasos para la receta:</h3>
+                <br>
+                <textarea style="width: 100%;" cols="75" rows="15" class="campo-formulario"></textarea>
+                <div class="boton-enviar">
+                    <button>Enviar</button>
                 </div>
             </div>
-            <div class="pasos">
-                <h3>Pasos para la receta:</h3>
-                <textarea cols="75" rows="15" class="campo-formulario"></textarea>
-            </div>
-            <button>Enviar</button>
         </div>
     </section>
+
     <!--SECCION CONTACTO-->
     <section id="contacto">
         <div class="fila">
@@ -123,36 +211,36 @@
             </div>
             <div class="col">
                 <h3>Menu</h3>
-                <a href="#">Inicio</a>
-                <a href="#">Recetas</a>
-                <a href="#">Contacto</a>
+                <a href="#inicio">Inicio</a>
+                <a href="#recetas">Recetas</a>
+                <a href="#contacto">Contacto</a>
             </div>
             <div class="col">
                 <h3>Autores</h3>
-                <a href="#">Andy Abad</a>
-                <a href="#">Erick Verdugo</a>
+                <a href="https://www.facebook.com/andy.fabricio.756" target="_blank">Andy Abad</a>
+                <a href="#" target="_blank">Erick Verdugo</a>
             </div>
             <div class="col">
                 <h3>Social Media</h3>
                 <div class="media">
-                    <i class="fa-brands fa-twitter"></i> 
+                    <i class="fa-brands fa-twitter"></i>
                     <a href="#">Twiter</a>
                 </div>
                 <div class="media">
                     <i class="fa-brands fa-instagram"></i>
                     <a href="#">Instragram</a>
                 </div>
-
-                
             </div>
             <div class="col">
                 <h3>Contacto</h3>
                 <input type="text" placeholder="Tu correo">
-                <button class="enviar">Enviar</button>
+                <button id="enviar">Enviar</button>
             </div>
         </div>
     </section>
 
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
