--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -185,7 +185,7 @@
             <div class="formulario-receta">
                 <div class="nombre-receta">
                     <h3>Nombre de la receta</h3>
-                    <input type="text" class="campo-formulario">
+                    <input type="text" class="campo-formulario" id="nombre-rec">
                 </div>
                 <div class="ingredientes">
                     <h3>Ingredientes:</h3>
@@ -197,7 +197,7 @@
                 <br>
                 <textarea style="width: 100%;" cols="75" rows="15" class="campo-formulario"></textarea>
                 <div class="boton-enviar">
-                    <button>Enviar</button>
+                    <button onclick="agregarReceta()">Enviar</button>
                 </div>
             </div>
         </div>
